# agentic-legibility

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  agentic_legibility_score.py  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
references/: scoring-rubric.md
scripts/: scan_repo.py
tests/: test_scan_repo.py
